operator/pkg/model/ingestion/testdata/gateway/Conformance/TLSRouteHostnameIntersection/input-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gw-tlsroute-empty-hostname-x-4
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: "cilium"
  listeners:
    - name: listener-empty-hostname
      protocol: TLS
      port: 443
      allowedRoutes:
        namespaces:
          from: Same
        kinds:
          - kind: TLSRoute
      tls:
        mode: Passthrough
status:
  conditions:
    - type: "Accepted"
      status: "True"
      reason: "Accepted"
      message: "Gateway successfully scheduled"
    - type: "Programmed"
      status: "False"
      reason: "AddressNotAssigned"
      message: "Gateway waiting for address"
  listeners:
    - attachedRoutes: 2
      conditions:
        - lastTransitionTime: "2025-07-01T14:29:32Z"
          message: Resolved Refs
          reason: ResolvedRefs
          status: "True"
          type: ResolvedRefs
        - lastTransitionTime: "2025-07-01T14:29:32Z"
          message: Listener Accepted
          reason: Accepted
          status: "True"
          type: Accepted
        - lastTransitionTime: "2025-07-01T14:29:32Z"
          message: Address not ready yet
          reason: Pending
          status: "False"
          type: Programmed
      name: listener-empty-hostname
      supportedKinds:
        - group: gateway.networking.k8s.io
          kind: TLSRoute
