operator/pkg/model/ingestion/testdata/gateway/Conformance/TLSRouteHostnameIntersection/input-tlsroute.yaml
- apiVersion: gateway.networking.k8s.io/v1
  kind: TLSRoute
  metadata:
    name: tlsroute-exact-hostname-x-4
    namespace: gateway-conformance-infra
  spec:
    parentRefs:
      - name: gw-tlsroute-empty-hostname-x-4
        namespace: gateway-conformance-infra
    hostnames:
      - abc.example.com
    rules:
      - backendRefs:
          - name: tls-backend
            port: 443
  status:
    parents:
      - conditions:
          - lastTransitionTime: "2025-08-15T00:36:04Z"
            message: Accepted TLSRoute
            reason: Accepted
            status: "True"
            type: Accepted
          - lastTransitionTime: "2025-08-15T00:36:04Z"
            message: Service reference is valid
            reason: ResolvedRefs
            status: "True"
            type: ResolvedRefs
        controllerName: io.cilium/gateway-controller
        parentRef:
          name: gw-tlsroute-empty-hostname-x-4
          namespace: gateway-conformance-infra
- apiVersion: gateway.networking.k8s.io/v1
  kind: TLSRoute
  metadata:
    name: tlsroute-less-specific-wc-hostname-x-4
    namespace: gateway-conformance-infra
  spec:
    parentRefs:
      - name: gw-tlsroute-empty-hostname-x-4
        namespace: gateway-conformance-infra
    hostnames:
      - "*.com"
    rules:
      - backendRefs:
          - name: tls-backend-2
            port: 443
  status:
    parents:
      - conditions:
          - lastTransitionTime: "2025-08-15T00:36:04Z"
            message: Accepted TLSRoute
            reason: Accepted
            status: "True"
            type: Accepted
          - lastTransitionTime: "2025-08-15T00:36:04Z"
            message: Service reference is valid
            reason: ResolvedRefs
            status: "True"
            type: ResolvedRefs
        controllerName: io.cilium/gateway-controller
        parentRef:
          name: gw-tlsroute-empty-hostname-x-4
          namespace: gateway-conformance-infra
